--- a/cara belanja.html
+++ b/cara belanja.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>BATOXSTORE</title>
+    <title>Storepedia</title>
 </head>
 <body>
         <!--Promotion-->
@@ -22,7 +22,7 @@
               <div class="flex flex-col items-start gap-4 md:flex-row md:items-center md:justify-between">
                 <div>
                   <a href="index.html"
-                   class="text-2xl font-bold text-gray-900 sm:text-3xl">BATOXSTORE</a>
+                   class="text-2xl font-bold text-indigo-600 sm:text-3xl">Storepedia</a>
           
                   <p class="mt-1.5 text-sm text-gray-500">
                     Menjual Hoddie Nyaman Dengan Harga Yang Terjangkau
@@ -56,7 +56,7 @@
               <summary
                 class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
               >
-                <h2 class="font-medium">Bagaimana Cara Belanja Di BATOXSTORE?</h2>
+                <h2 class="font-medium">Bagaimana Cara Belanja Di Storepedia?</h2>
           
                 <svg
                   class="size-5 shrink-0 transition duration-300 group-open:-rotate-180"
